Add multiple constructors for POJOs
Clean-up stored file code