@@ -1,13 +1,12 @@
 package com.lasthopesoftware.bluewater.client.library.sync.specs.GivenASetOfStoredItems;
 
-import com.annimon.stream.Collectors;
 import com.annimon.stream.Stream;
 import com.lasthopesoftware.bluewater.client.connection.IConnectionProvider;
 import com.lasthopesoftware.bluewater.client.library.items.media.files.ServiceFile;
 import com.lasthopesoftware.bluewater.client.library.items.media.files.access.IFileProvider;
 import com.lasthopesoftware.bluewater.client.library.items.media.files.access.parameters.FileListParameters;
 import com.lasthopesoftware.bluewater.client.library.items.media.files.stored.IStoredFileAccess;
-import com.lasthopesoftware.bluewater.client.library.items.media.files.stored.download.IStoredFileDownloader;
+import com.lasthopesoftware.bluewater.client.library.items.media.files.stored.download.StoredFileDownloader;
 import com.lasthopesoftware.bluewater.client.library.items.media.files.stored.repository.StoredFile;
 import com.lasthopesoftware.bluewater.client.library.items.stored.IStoredItemAccess;
 import com.lasthopesoftware.bluewater.client.library.items.stored.StoredItem;
@@ -16,6 +15,8 @@ import com.lasthopesoftware.bluewater.client.library.repository.permissions.read
 import com.lasthopesoftware.bluewater.client.library.repository.permissions.write.ILibraryStorageWritePermissionsRequirementsProvider;
 import com.lasthopesoftware.bluewater.client.library.sync.LibrarySyncHandler;
 import com.lasthopesoftware.messenger.promises.Promise;
+import com.lasthopesoftware.storage.read.permissions.IFileReadPossibleArbitrator;
+import com.lasthopesoftware.storage.write.permissions.IFileWritePossibleArbitrator;
 
 import org.junit.BeforeClass;
 import org.junit.Test;
@@ -25,6 +26,7 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.TimeUnit;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.mock;
@@ -38,7 +40,8 @@ public class WhenSyncingTheStoredItems {
 	public static void before() throws InterruptedException {
 		final IStoredItemAccess storedItemAccessMock = mock(IStoredItemAccess.class);
 		when(storedItemAccessMock.promiseStoredItems())
-			.thenReturn(new Promise<>(Collections.singleton(generateStoredItem(3, 14))));
+			.thenReturn(new Promise<>(Collections.singleton(
+				new StoredItem(1, 14, StoredItem.ItemType.PLAYLIST))));
 
 		final IFileProvider mockFileProvider = mock(IFileProvider.class);
 		when(mockFileProvider.promiseFiles(FileListParameters.Options.None, "Playlist/Files", "Playlist=14" ))
@@ -53,7 +56,11 @@ public class WhenSyncingTheStoredItems {
 			new Library(),
 			storedItemAccessMock,
 			mock(IStoredFileAccess.class),
-			mock(IStoredFileDownloader.class),
+			new StoredFileDownloader(
+				mock(IConnectionProvider.class),
+				mock(IStoredFileAccess.class),
+				mock(IFileReadPossibleArbitrator.class),
+				mock(IFileWritePossibleArbitrator.class)),
 			mock(IFileProvider.class),
 			mock(ILibraryStorageReadPermissionsRequirementsProvider.class),
 			mock(ILibraryStorageWritePermissionsRequirementsProvider.class));
@@ -63,23 +70,12 @@ public class WhenSyncingTheStoredItems {
 		final CountDownLatch countDownLatch = new CountDownLatch(1);
 		librarySyncHandler.setOnQueueProcessingCompleted(handler -> countDownLatch.countDown());
 
-		countDownLatch.await();
-	}
-
-	public void thenTheFilesNotInTheStoredItemsAreDeleted() {
-
+		countDownLatch.await(1, TimeUnit.SECONDS);
 	}
 
 	@Test
 	public void thenTheFilesInTheStoredItemsAreSynced() {
-		assertThat(Stream.of(storedFileJobResults).collect(Collectors.toList())).containsExactly(new StoredFile());
-	}
-
-	private static StoredItem generateStoredItem(int storedItemId, int serviceId) {
-		final StoredItem storedItem = new StoredItem();
-		storedItem.setId(storedItemId);
-		storedItem.setServiceId(serviceId);
-		storedItem.setItemType(StoredItem.ItemType.PLAYLIST);
-		return storedItem;
+		assertThat(Stream.of(storedFileJobResults).map(StoredFile::getServiceId).toList())
+			.containsExactly(1, 2, 4, 10);
 	}
 }
